--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
 nvim/.config/nvim/plugin/packer_compiled.lua
-./nvim/.config/nvim/after/plugin/work.lua
+nvim/.config/nvim/after/plugin/gitlinker.lua
