--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
-nvim/.config/nvim/plugin/packer_compiled.lua
 nvim/.config/nvim/after/plugin/gitlinker.lua
+nvim/.config/nvim/ftdetect/groovy.vim
+nvim/.config/nvim/ftplugin/java.lua
